# app4triqs

./: CMakeLists.txt  Dockerfile.build  Jenkinsfile  README.md  requirements.txt
.github/workflows/: build.yml
c++/app4triqs/: CMakeLists.txt  app4triqs.hpp  container_set.cpp  container_set.hpp  params.cpp  params.hpp  post_process.hpp  qmc_config.cpp  qmc_config.hpp  solver_core.cpp  solver_core.hpp  types.hpp
c++/app4triqs/measures/: simple.cpp  simple.hpp
c++/app4triqs/moves/: update.cpp  update.hpp
doc/: CMakeLists.txt  conf.py.in
doc/_autosummary/: app4triqs.app4triqs_module.Toto.rst  app4triqs.app4triqs_module.chain.rst  app4triqs.app4triqs_module.rst  app4triqs.rst  app4triqs.version.rst  app4triqs.version.show_git_hash.rst  app4triqs.version.show_version.rst
packaging/: CMakeLists.txt  Dockerfile.msan  Dockerfile.sanitize  Dockerfile.ubuntu-clang  Dockerfile.ubuntu-intel  app4triqs-foss-2021b.eb.in
packaging/conda/: meta.yaml.in
python/app4triqs/: CMakeLists.txt  __init__.py  app4triqs_module.cpp  app4triqs_module.wrap.cxx  parameters_solve_params_t.rst  post_process_desc.py  solver.py  solver_core_desc.py
share/: CMakeLists.txt  app4triqs.modulefile.in
test/c++/: CMakeLists.txt  basic.cpp  hubbard.cpp
test/python/: Basic.py  CMakeLists.txt  Hubbard.py
